# forensics-tools

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  Makefile.toml  README.md
.github/workflows/: release.yml
crates/mft/: Cargo.toml
crates/mft/src/: csv.rs  entry.rs  err.rs  lib.rs  mft.rs  utils.rs
crates/mft/src/attribute/: data_run.rs  header.rs  mod.rs  non_resident_attr.rs  raw.rs  x10.rs  x20.rs  x30.rs  x40.rs  x80.rs  x90.rs
crates/mft/src/tests/: fixtures.rs
crates/mft/tests/: fixtures.rs  test_cli.rs  test_cli_interactive.rs  test_data_run.rs  test_entry.rs
crates/qsv/: Cargo.toml
crates/timeline-explorer/: Cargo.toml
crates/timeline-explorer/benches/: csv_indexing_benchmark.rs
crates/timeline-explorer/src/: lib.rs  performance.rs
crates/timeline-explorer/src/core/: csv_loader.rs
crates/timeline-explorer/src/index/: mod.rs  schema.rs  search.rs  writer.rs
crates/timeline-explorer/src/utils/: app_dir.rs  io_utils.rs  mod.rs  row.rs
crates/timeline-explorer/tests/: test_load_csv.rs
crates/timeline-explorer/tests/data/: mft.csv
crates/waka/: Cargo.toml
crates/waka-core/: Cargo.toml
crates/waka-core/src/: apply.rs  applydp.rs  clipboard.rs  config.rs  count.rs  datefmt.rs  dedup.rs  diff.rs  edit.rs  enumerate.rs  exclude.rs  explode.rs  extdedup.rs  extsort.rs  fill.rs  fixlengths.rs  flatten.rs  fmt.rs  foreach.rs  frequency.rs  geocode.rs  geoconvert.rs  headers.rs  index.rs  joinp.rs  jsonl.rs  lib.rs  lookup.rs  luau.rs  partition.rs  pivotp.rs  pseudo.rs  rename.rs  replace.rs  reverse.rs  safenames.rs  sample.rs  schema.rs  search.rs  searchset.rs  (+14 more)
crates/waka-gui/: Cargo.toml
crates/waka-gui/src/: util.rs
crates/waka-gui/src/app/: basic.rs  sqlq.rs  table.rs
crates/waka/src/: main.rs  util.rs
crates/waka/src/app/: basic.rs  ftsq.rs  mod.rs  sqlq.rs  table.rs
