[workspace]
resolver = "3"
members = ["crates/mft", "crates/waka-gui", "crates/waka-core"]

[workspace.package]
version = "0.0.1"
authors = ["Dat Nguyen <dat.nguyen@bitbytelab.io>"]
edition = "2024"
readme = "README.md"
homepage = "https://github.com/nguyenthdat/forensics-tools"
license = "MIT"

[workspace.dependencies]
mtf = { version = "0.6.1", default-features = false, path = "crates/mft" }
csvs_convert = { version = "0.12.1", features = ["converters", "parquet"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0" }
thiserror = "2.0.14"
regex = "1.11.2"
chrono = { version = "0.4", default-features = false }
rand = "0.9.2"
mimalloc = "0.1.47"
ustr = { version = "1.1.0", features = ["serde"] }
assert_cmd = "2.0"
bitflags = "2.9.1"
byteorder = "1"
dialoguer = { version = "0.11.0" }
encoding = "0.2"
indoc = { version = "2.0" }
itertools = "0.14.0"
lru = "0.16.0"
num-derive = "0.4.2"
num-traits = "0.2"
predicates = "3.1.3"
rexpect = "0.6.2"
skeptic = "0.13"
tempfile = "3.20.0"
winstructs = "0.3.0"
dirs = "6.0.0"
rayon = "1.10.0"
lexical-core = "1.0.5"
simdutf8 = "0.1.5"
smallvec = "1.15.1"
snap = "1.1.1"
rust_decimal = "1.37.2"
dotenvy = "0.15.7"
ryu = "1.0.20"
phf = "0.12.1"
futures-util = "0.3.31"
foldhash = "0.1.5"
csv-index = "0.1.6"
simd-json = "0.15.1"
directories = "6.0.0"
qsv-sniffer = "0.11.0"
docopt = "1.1.1"
filetime = "0.2.25"
zip = "4.3.0"
sysinfo = "0.37.0"
libc = "0.2.175"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5.15"
qsv-dateparser = "0.13.0"
threadpool = "1.8.1"
qsv-stats = "0.37.0"
itoa = "1.0.15"
sha256 = "1.6.0"
fast-float2 = "0.2.3"
atoi_simd = "0.16.1"
rand_hc = "0.4.0"
strum_macros = "0.27.2"
rand_xoshiro = "0.7.0"
strum = { version = "0.27.2", features = ["phf"] }
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
env_logger = "0.11.8"
simplelog = { version = "0.12" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "std",
    "tracing-log",
] }
log = { version = "0.4.27" }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
time = { version = "0.3.41", features = [
    "serde",
    "parsing",
    "macros",
    "large-dates",
    "local-offset",
    "serde-human-readable",
    "serde-well-known",
    "quickcheck",
    "formatting",
] }
bon = "3.6.5"
num_cpus = "1.17.0"
speedate = "0.17.0"
csv = "1"
reqwest = { version = "0.12", features = [
    "blocking",
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
    "stream",
    "zstd",
], default-features = false }

tantivy = "0.24.2"
tantivy-query-grammar = "0.24.0"
tantivy-derive = { git = "https://github.com/nguyenthdat/tantivy-derive.git" }

# rustyline = { version = "17.0.0", features = [
#     "buffer-redux",
#     "derive",
#     "regex",
#     "rusqlite",
#     "signal-hook",
#     "with-fuzzy",
#     "with-sqlite-history",
# ] }
# rusqlite = "0.37.0"

eframe = "0.32.1"
egui = "0.32.1"
egui_extras = { version = "0.32.1", features = [
    "all_loaders",
    "chrono",
    "datepicker",
    "document-features",
    "serde",
    "svg_text",
    "syntect",
] }
epaint = { version = "0.32.1", features = ["serde"] }

rfd = { version = "0.15.4", features = [
    "tokio",
    "common-controls-v6",
    "file-handle-inner",
] }

sqlparser = "0.58.0"
syntect = "5.2.0"
unicode-segmentation = "1.12.0"

polars-ops = { version = "0.50" }
polars-utils = { version = "0.50" }
polars-sql = { version = "0.50.0", default-features = false, features = [
    "csv",
    "json",
    "serde",
    "parquet",
    "timezones",
    "binary_encoding",
    "dtype-decimal",
] }
polars = { version = "0.50", features = [
    "asof_join",
    "avro",
    "avx512",
    "aws",
    "binary_encoding",
    "business",
    # "cloud",
    "coalesce",
    "cross_join",
    "cse",
    "csv",
    "decompress",
    "diagonal_concat",
    "dtype-array",
    "dtype-categorical",
    "dtype-decimal",
    # "dtype-full",
    "extract_jsonpath",
    "iejoin",
    "ipc",
    "json",
    "lazy",
    "object",
    "parquet",
    "performant",
    "pivot",
    "semi_anti_join",
    "serde-lazy",
    "strings",
    "string_normalize",
    "sql",
    "timezones",
] }

criterion = "0.7.0"
clap = { version = "4" }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
strip = true

[profile.release-samply]
inherits = "release"
debug = true
strip = false

[profile.release-nightly]
inherits = "release"
panic = "abort"

[patch.crates-io]
csv = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }
csv-core = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }
csv-index = { git = "https://github.com/dathere/rust-csv", branch = "qsv-optimized-non-allocating-byterecord-trim" }
csvs_convert = { git = "https://github.com/jqnatividad/csvs_convert", branch = "bump-rust_xlsxwriter-to-0.88" }
json-objects-to-csv = { git = "https://github.com/jqnatividad/json-objects-to-csv", branch = "preserve_order_issue_10" }
localzone = { git = "https://github.com/jqnatividad/localzone", branch = "bump-deps-may2025" }
rust_decimal = { git = "https://github.com/paupino/rust-decimal", branch = "v1" }
ord_subset = { git = "https://github.com/nguyenthdat/ord_subset", branch = "master" }
