[package]
name = "mft"
version.workspace = true
authors = [
  "Dat Nguyen <dat.nguyen@bitbytelab.io>",
  "Omer Ben-Amram <omerbenamram@gmail.com>",
]
edition.workspace = true
description = "A Fast (and safe) parser for the Windows Master File Table (MFT) format"
readme.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "mft_cmd"
required-features = ["mft_cmd"]

[[bin]]
name = "mft_explorer"
required-features = ["mft_explorer"]

[[bench]]
harness = false
name = "benchmark"
path = "./src/benches/benchmark.rs"

[dependencies]
anyhow = { workspace = true, optional = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true, optional = true }
csv = { workspace = true }
dialoguer = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
encoding = { workspace = true }
indoc = { workspace = true, optional = true }
itertools = { workspace = true }
log = { workspace = true, features = ["release_max_level_debug"] }
lru = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simplelog = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
thiserror = { workspace = true }
winstructs = { workspace = true }

[dependencies.chrono]
workspace = true
default-features = false
features = ["clock", "serde", "std"]

[dev-dependencies]
assert_cmd = { workspace = true }
criterion = { workspace = true }
env_logger = { workspace = true }
predicates = { workspace = true }
skeptic = { workspace = true }
tempfile = { workspace = true }

# rexpect relies on unix process semantics, but it's only used for process interaction tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rexpect = { workspace = true }

[features]
default = ["mft_cmd"]
mft_cmd = ["anyhow", "clap", "dialoguer", "indoc", "simplelog"]
mft_explorer = ["anyhow", "clap", "eframe", "egui", "tantivy"]
