[package]
name = "timeline-explorer"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true

[features]
default = ["gui"]
cli = []
gui = []

[dependencies]
anyhow = { workspace = true }
csv = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tantivy = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
polars = { workspace = true, features = ["full"] }
rayon = { workspace = true }
time = { workspace = true, features = [
    "serde",
    "parsing",
    "macros",
    "large-dates",
    "local-offset",
    "serde-human-readable",
    "serde-well-known",
    "quickcheck",
    "formatting",
] }
log.workspace = true
tempfile.workspace = true
tracing-subscriber = { workspace = true }
num_cpus = { workspace = true }
speedate = { workspace = true }
lexical-core = { workspace = true }
rustyline = { workspace = true }
rusqlite = { workspace = true }
bon = { workspace = true }
tantivy-query-grammar = { workspace = true }

[dependencies.chrono]
workspace = true
default-features = false
features = ["clock", "serde", "std"]

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.0"

[[bench]]
name = "csv_indexing_benchmark"
harness = false

[[bin]]
name = "timeline-explorer-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bin]]
name = "timeline-explorer-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]
