[package]
name = "waka-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
mft = { version = "0.0.1", path = "../mft" }

anyhow.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
simdutf8.workspace = true
smallvec.workspace = true
num_cpus.workspace = true
csv.workspace = true
tempfile.workspace = true
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true, features = ["log"] }
polars.workspace = true
polars-ops.workspace = true
polars-utils.workspace = true
mlua.workspace = true
snap.workspace = true
rust_decimal.workspace = true
dotenvy.workspace = true
ryu.workspace = true
phf.workspace = true
futures-util.workspace = true
foldhash.workspace = true
csv-index.workspace = true
simd-json.workspace = true
directories.workspace = true
qsv-sniffer.workspace = true
reqwest.workspace = true
docopt.workspace = true
filetime.workspace = true
zip.workspace = true
sysinfo.workspace = true
libc.workspace = true
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-appender.workspace = true
tracing-log.workspace = true
itertools.workspace = true

crossbeam-channel = "0.5.15"
qsv-dateparser = "0.13.0"
threadpool = "1.8.1"
qsv-stats = "0.37.0"
itoa = "1.0.15"
sha256 = "1.6.0"
fast-float2 = "0.2.3"
atoi_simd = "0.16.1"
