[package]
name = "waka-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
mft = { version = "0.0.1", path = "../mft" }

anyhow.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
simdutf8.workspace = true
smallvec.workspace = true
num_cpus.workspace = true
csv.workspace = true
tempfile.workspace = true
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true, features = ["log"] }
polars.workspace = true
polars-ops.workspace = true
polars-utils.workspace = true
mlua.workspace = true
snap.workspace = true
rust_decimal.workspace = true
dotenvy.workspace = true
ryu.workspace = true
phf.workspace = true
futures-util.workspace = true
foldhash.workspace = true
csv-index.workspace = true
simd-json.workspace = true
directories.workspace = true
reqwest.workspace = true
docopt.workspace = true
filetime.workspace = true
zip.workspace = true
sysinfo.workspace = true
libc.workspace = true
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-appender.workspace = true
tracing-log.workspace = true
itertools.workspace = true
crossbeam-channel.workspace = true
threadpool.workspace = true
itoa.workspace = true
sha256.workspace = true
fast-float2.workspace = true
atoi_simd.workspace = true
# QSV specific dependencies
qsv-sniffer.workspace = true
qsv-stats.workspace = true
qsv-dateparser.workspace = true
rand.workspace = true

# new dependencies
rand_hc = "0.4.0"
strum_macros = "0.27.2"
rand_xoshiro = "0.7.0"
strum = { version = "0.27.2", features = ["phf"] }
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
