[package]
name = "waka-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
mft = { version = "0.0.1", path = "../mft" }

anyhow.workspace = true
rayon.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
simdutf8.workspace = true
smallvec.workspace = true
num_cpus.workspace = true
csv.workspace = true
tempfile.workspace = true
chrono = { workspace = true, features = ["serde"] }
tracing = { workspace = true, features = ["log"] }
polars.workspace = true
polars-ops.workspace = true
polars-utils.workspace = true
snap.workspace = true
rust_decimal.workspace = true
dotenvy.workspace = true
ryu.workspace = true
phf.workspace = true
futures-util.workspace = true
foldhash.workspace = true
csv-index.workspace = true
simd-json.workspace = true
directories.workspace = true
reqwest.workspace = true
docopt.workspace = true
filetime.workspace = true
zip.workspace = true
sysinfo.workspace = true
libc.workspace = true
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-appender.workspace = true
tracing-log.workspace = true
itertools.workspace = true
crossbeam-channel.workspace = true
threadpool.workspace = true
itoa.workspace = true
sha256.workspace = true
fast-float2.workspace = true
atoi_simd.workspace = true
rand_hc.workspace = true
strum_macros.workspace = true
rand_xoshiro.workspace = true
strum = { workspace = true, features = ["phf"] }
arboard = { workspace = true, features = ["wayland-data-control"] }
bon.workspace = true
rand.workspace = true
byteorder.workspace = true
gzp = { version = "1", default-features = false, features = ["snappy_default"] }
tokio = { workspace = true, features = ["full", "tracing"] }

# QSV specific dependencies
qsv-sniffer.workspace = true
qsv-stats.workspace = true
qsv-dateparser.workspace = true
csvs_convert.workspace = true

# Tantivy
tantivy.workspace = true
tantivy-query-grammar.workspace = true
tantivy-derive.workspace = true
tabwriter = "1.4.1"
bytes = "1.10.1"
futures = "0.3.31"
url = "2.5.4"
file-format = "0.28.0"
