[package]
name = "waka"
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
qsv = { workspace = true, default-features = false, features = [
    "distrib_features",
    "polars",
] }

anyhow.workspace = true

eframe = { workspace = true, features = ["persistence", "serde", "wgpu"] }
epaint = { workspace = true, features = ["serde"] }

polars-sql = { workspace = true, default-features = false }
sqlparser = { workspace = true }

syntect = { workspace = true }
unicode-segmentation = { workspace = true }

regex = { workspace = true }
mimalloc = { workspace = true }

tracing = { workspace = true, features = ["std", "log"] }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "std",
    "tracing-log",
] }
ustr = { version = "1.1.0", features = ["serde"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
bon.workspace = true
